--- a/src/app/components/informe-categoria/informe-categoria.component.html
+++ b/src/app/components/informe-categoria/informe-categoria.component.html
@@ -88,7 +88,7 @@
     </div>
   </div>
   <!-- fin boton ocultar -->
-  <div class="container-cards mt-3 ml-3 mr-2">
+  <div class="container-cards mt-3 ml-3 mr-3">
     <div class="grid">
       <div class="titulo-grid1">
         <h1 class="titulo-h1">Categorías</h1>
@@ -238,20 +238,20 @@
       </div>
     </div>
 
-    <div class="mb-4">
+    <div>
       <!-- Cards Mujer - Hombre - Kids -->
-      <div class="grey-bg container-fluid mb-4">
+      <div class="mb-4">
         <section id="minimal-statistics">
           <div class="row">
             <div class="col-xl-4 col-sm-6 col-12">
               <div class="card">
                 <div class="card-content">
                   <div class="card-body">
-                    <div class="media cardAlign">
+                    <div class="cardAlign">
                       <div class="align-self-center">
                         <img src="../../../../assets/mujer.png" alt="Silueta Mujer" class="float-left imgCards">
                       </div>
-                      <div class="media-body text-left">
+                      <div>
                         <h2>Mujeres</h2>
                         <p>Nuevos: {{womenNew}}</p>
                         <p>Descontinuados: {{womendiscontinued}}</p>
@@ -275,11 +275,11 @@
               <div class="card">
                 <div class="card-content">
                   <div class="card-body">
-                    <div class="media d-flex">
+                    <div class="cardAlign">
                       <div class="align-self-center">
                         <img src="../../../../assets/hombre.png" alt="Silueta Hombre" class="float-left imgCards">
                       </div>
-                      <div class="media-body text-left">
+                      <div>
                         <h2>Hombres</h2>
                         <p>Nuevos: {{menNew}}</p>
                         <p>Descontinuados: {{mendiscontinued}}</p>
@@ -303,11 +303,11 @@
               <div class="card">
                 <div class="card-content">
                   <div class="card-body">
-                    <div class="media d-flex">
-                      <div class="align-self-center">
+                    <div class="cardAlign">
+                      <div class="align-self-center mr-4">
                         <img src="../../../../assets/kids.png" alt="Silueta Kids" class="float-left imgCards">
                       </div>
-                      <div class="media-body text-left ml-4">
+                      <div>
                         <h2>Kids</h2>
                         <p>Nuevos: {{kidsNew}}</p>
                         <p>Descontinuados: {{kidsdiscontinued}}</p>
