--- a/src/app/components/productos/productos.component.html
+++ b/src/app/components/productos/productos.component.html
@@ -88,7 +88,7 @@
       </div>
 
     <br>
-    <div class="container-fluid">
+    <div class="container-fluid ml-2 mr-2">
         <router-outlet></router-outlet>
     </div>
     
