--- a/src/app/components/productos/general/general.component.css
+++ b/src/app/components/productos/general/general.component.css
@@ -75,8 +75,7 @@
 
 @media screen and (max-width: 600px) {
   .grid {
-    display: grid;
-    grid-template-columns: 70% 30%;
+    display: block;
   }
 }
 
