--- a/src/app/components/informes/informe-descuento/informe-descuento.component.html
+++ b/src/app/components/informes/informe-descuento/informe-descuento.component.html
@@ -1,7 +1,7 @@
 <div class="grid">
   <!-- chart descuento promedio -->
   <div class="chart-container">
-    <div class="gridFiltersCharts">
+    <div class="alignFilter">
       <div>
         <h2 class="titulo-chart">Descuento promedio marcas</h2>
       </div>
@@ -9,7 +9,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal(template)" width="17" heigth="17"
           xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
           viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill:#000000 " role="img"
-          aria-label="Illustration of a Funnel" class="hoverSvgFilter svgFilterChart">
+          aria-label="Illustration of a Funnel" class="hoverSvgFilter svgFilter">
           <g id="__id33_ssutzzo1g">
             <path d="m350 144.09h180v20l-70 90v100l-40-20v-80l-70-90v-20" transform="translate(-350 -144.09)"
               style="fill: inherit"></path>
@@ -151,7 +151,7 @@
 
   <!-- filtro para la tabla -->
   <div class="table-container">
-    <div class="gridFiltersTable">
+    <div class="alignFilter">
       <div>
         <h2>Categorías con mayor cambio - Descuento promedio</h2>
       </div>
@@ -159,7 +159,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal2(template2)" width="17" heigth="17"
           xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
           viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill:#000000 " role="img"
-          aria-label="Illustration of a Funnel" class="hoverSvgFilter svgFilterChart">
+          aria-label="Illustration of a Funnel" class="hoverSvgFilter svgFilter">
           <g id="__id33_ssutzzo1g">
             <path d="m350 144.09h180v20l-70 90v100l-40-20v-80l-70-90v-20" transform="translate(-350 -144.09)"
               style="fill: inherit"></path>
