--- a/src/app/components/informes/informe-descontinuados/informe-descontinuados.component.html
+++ b/src/app/components/informes/informe-descontinuados/informe-descontinuados.component.html
@@ -1,13 +1,13 @@
 <div class="grid">
   <!-- chart -->
   <div class="chart-container">
-    <div class="gridFiltersCharts">
+    <div class="alignFilter">
       <h2 class="titulo-chart">Total descontinuados marcas</h2>
 
       <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal(template)" width="17" heigth="17"
         xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
         viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill:#000000 " role="img"
-        aria-label="Illustration of a Funnel" class="hoverSvgFilter svgFilterChart">
+        aria-label="Illustration of a Funnel" class="hoverSvgFilter svgFilter">
         <g id="__id33_ssutzzo1g">
           <path d="m350 144.09h180v20l-70 90v100l-40-20v-80l-70-90v-20" transform="translate(-350 -144.09)"
             style="fill: inherit"></path>
@@ -148,7 +148,7 @@
 
   <!-- tabla descontinuados -->
   <div class="table-container">
-    <div class="gridFiltersTable">
+    <div class="alignFilter">
       <div>
         <h2>Categorías con mayor cambio - Descontinuados</h2>
       </div>
@@ -157,7 +157,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal2(template2)" width="17" heigth="17"
           xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
           viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill:#000000 " role="img"
-          aria-label="Illustration of a Funnel" class="hoverSvgFilter svgFilterChart">
+          aria-label="Illustration of a Funnel" class="hoverSvgFilter svgFilter">
           <g id="__id33_ssutzzo1g">
             <path d="m350 144.09h180v20l-70 90v100l-40-20v-80l-70-90v-20" transform="translate(-350 -144.09)"
               style="fill: inherit"></path>
