--- a/src/app/components/informes/informe-descuento/informe-descuento.component.css
+++ b/src/app/components/informes/informe-descuento/informe-descuento.component.css
@@ -2,10 +2,6 @@
   height: 250px;
 }
 
-.titulo-chart {
-  text-align: center;
-}
-
 .marginTitle {
   margin-top: -20px;
 }
@@ -146,9 +142,15 @@ tr:hover td {
   grid-template-columns: 50% 50%;
 }
 
-.gridFiltersCharts {
-  display: grid;
-  grid-template-columns: 90% 10%;
+.alignFilter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.svgFilter {
+  margin-bottom: 10px;
+  margin-left: 10px;
 }
 
 .gridFiltersTable {
