--- a/src/app/components/informes/informes.component.css
+++ b/src/app/components/informes/informes.component.css
@@ -421,5 +421,11 @@ a.sel2.activo::before {
   }
 }
 
+@media (max-width: 600px) {
+  .container-cards {
+    margin-bottom: 80%;
+  }
+}
+
 /* fin media querys */
   
