--- a/src/app/components/informes/informe-descontinuados/informe-descontinuados.component.html
+++ b/src/app/components/informes/informe-descontinuados/informe-descontinuados.component.html
@@ -297,11 +297,11 @@
     <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-hover table-sm">
       <thead>
         <tr>
-          <th>Categoría</th>
-          <th>Subcategoría</th>
-          <th>Tipo de prenda</th>
-          <th>Descontinuados</th>
-          <th>Diferencia</th>
+          <th class="alignTableItems">Categoría</th>
+          <th class="alignTableItems">Subcategoría</th>
+          <th class="alignTableItems">Tipo de prenda</th>
+          <th class="alignTableItems">Descontinuados</th>
+          <th class="alignTableItems">Diferencia</th>
         </tr>
       </thead>
       <tbody>
