--- a/src/app/components/informes/informe-descuento/informe-descuento.component.css
+++ b/src/app/components/informes/informe-descuento/informe-descuento.component.css
@@ -142,15 +142,30 @@ tr:hover td {
   grid-template-columns: 50% 50%;
 }
 
-.alignFilter {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.alignFilterChart {
+  display: grid;
+  grid-template-columns: 99% 1%;
+  text-align: center;
+}
+
+.alignFilterTable {
+  display: grid;
+  grid-template-columns: 99% 1%;
+  text-align: center;
 }
 
 .svgFilter {
   margin-bottom: 10px;
-  margin-left: 10px;
+  margin-left: -25px;
+}
+
+.svgFilterChart {
+  margin-bottom: 10px;
+  margin-left: -100px;
+}
+
+.alignTableItems {
+  text-align: center;
 }
 
 .gridFiltersTable {
