--- a/src/app/components/informes/informe-descuento/informe-descuento.component.html
+++ b/src/app/components/informes/informe-descuento/informe-descuento.component.html
@@ -1,7 +1,7 @@
 <div class="grid">
   <!-- chart descuento promedio -->
   <div class="chart-container">
-    <div class="alignFilter">
+    <div class="alignFilterChart">
       <div>
         <h2 class="titulo-chart">Descuento promedio marcas</h2>
       </div>
@@ -9,7 +9,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal(template)" width="17" heigth="17"
           xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
           viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill:#000000 " role="img"
-          aria-label="Illustration of a Funnel" class="hoverSvgFilter svgFilter">
+          aria-label="Illustration of a Funnel" class="hoverSvgFilter svgFilterChart">
           <g id="__id33_ssutzzo1g">
             <path d="m350 144.09h180v20l-70 90v100l-40-20v-80l-70-90v-20" transform="translate(-350 -144.09)"
               style="fill: inherit"></path>
@@ -134,7 +134,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-danger" (click)="clearFilters()">Limpiar filtros</button>
-            <button type="button" class="btn btn-primary" (click)="closeModal()">Cerrar</button>
+            <button type="button" class="btn btn-primary" (click)="closeModal()">Aplicar filtros</button>
           </div>
         </ng-template>
       </div>
@@ -151,7 +151,7 @@
 
   <!-- filtro para la tabla -->
   <div class="table-container">
-    <div class="alignFilter">
+    <div class="alignFilterTable">
       <div>
         <h2>Categorías con mayor cambio - Descuento promedio</h2>
       </div>
@@ -284,7 +284,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-danger" (click)="clearFilters2()">Limpiar filtros</button>
-            <button type="button" class="btn btn-primary" (click)="closeModal2()">Cerrar</button>
+            <button type="button" class="btn btn-primary" (click)="closeModal2()">Aplicar filtros</button>
           </div>
         </ng-template>
       </div>
@@ -300,20 +300,20 @@
     <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-hover table-sm">
       <thead>
         <tr>
-          <th>Categoría</th>
-          <th>Subcategoría</th>
-          <th>Tipo de prenda</th>
-          <th>Descuento promedio</th>
-          <th>Diferencia</th>
+          <th class="alignTableItems">Categoría</th>
+          <th class="alignTableItems">Subcategoría</th>
+          <th class="alignTableItems">Tipo de prenda</th>
+          <th class="alignTableItems">Descuento promedio</th>
+          <th class="alignTableItems">Diferencia</th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let e of photos">
-          <td data-label="Categoría"> {{e.categoria}} </td>
-          <td data-label="Subcategoría"> {{e.subCategoria}} </td>
-          <td data-label="Tipo de prenda"> {{e.tipoPrenda}} </td>
-          <td data-label="Descuento promedio"> {{tableAvgDescuento}}% </td>
-          <td data-label="Diferencia" [ngClass]="diferencia()"> {{tableDifference[1]}} </td>
+          <td data-label="Categoría" class="alignTableItems"> {{e.categoria}} </td>
+          <td data-label="Subcategoría" class="alignTableItems"> {{e.subCategoria}} </td>
+          <td data-label="Tipo de prenda" class="alignTableItems"> {{e.tipoPrenda}} </td>
+          <td data-label="Descuento promedio" class="alignTableItems"> {{tableAvgDescuento}}% </td>
+          <td data-label="Diferencia" [ngClass]="diferencia()" class="alignTableItems"> {{tableDifference[1]}} </td>
         </tr>
       </tbody>
 
