--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -306,7 +306,7 @@
 
 
     </div>
-    <div class="mr-4 ml-4">
+    <div class="mr-4 ml-4 mt-4">
       <router-outlet></router-outlet>
     </div>
     <br>
