--- a/src/app/components/informes/informe-descuento/informe-descuento.component.css
+++ b/src/app/components/informes/informe-descuento/informe-descuento.component.css
@@ -144,7 +144,7 @@ tr:hover td {
 
 .alignFilterChart {
   display: grid;
-  grid-template-columns: 99% 1%;
+  grid-template-columns: 70% 30%;
   text-align: center;
 }
 
@@ -160,7 +160,7 @@ tr:hover td {
 }
 
 .svgFilterChart {
-  margin-bottom: 10px;
+  margin-bottom: 35px;
   margin-left: -100px;
 }
 
@@ -197,13 +197,22 @@ tr:hover td {
 /* media queryes */
 @media (max-width: 600px) {
 
+  .alignFilterChart {
+    display: inline-grid;
+    grid-template-columns: 70% 30%;
+    width: 100%;
+    align-items: center;
+  }
+
+  .svgFilterChart {
+    margin-bottom: 35px;
+    margin-left: -100px;
+  }
+
   .gridFiltersCharts {
     display: block;
   }
 
-  .svgFilterChart {
-    display: flex;
-  }
 
   .titulo-chart {
     text-align: left;
