--- a/src/app/components/informes/informe-descuento/informe-descuento.component.css
+++ b/src/app/components/informes/informe-descuento/informe-descuento.component.css
@@ -94,6 +94,14 @@ tr:hover td {
   color: green;
 }
 
+.alignTableTitles {
+  text-align: center;
+}
+
+.alignTableItems {
+  text-align: center;
+}
+
 /* Responsive tables*/
 @media screen and (max-width: 600px) {
   table {
@@ -122,6 +130,10 @@ tr:hover td {
     content: attr(data-label);
     font-weight: bold;
     float: left;
+  }
+
+  .alignTableItems {
+    text-align: right;
   }
 }
 /* Fin Tablas */
@@ -155,22 +167,13 @@ tr:hover td {
 }
 
 .svgFilter {
-  margin-bottom: 10px;
+  margin-top: 10px;
   margin-left: -25px;
 }
 
 .svgFilterChart {
-  margin-bottom: 10px;
+  margin-top: 10px;
   margin-left: -100px;
-}
-
-.alignTableItems {
-  text-align: center;
-}
-
-.gridFiltersTable {
-  display: grid;
-  grid-template-columns: 90% 10%;
 }
 
 @media (max-width: 1000px) {
@@ -197,20 +200,14 @@ tr:hover td {
 /* media queryes */
 @media (max-width: 600px) {
 
-  .gridFiltersCharts {
+  .alignFilterTable {
     display: block;
+    text-align: center;
   }
 
-  .svgFilterChart {
-    display: flex;
-  }
-
-  .titulo-chart {
-    text-align: left;
-  }
-
-  .gridFiltersTable {
-    display: block;
+  .svgFilter {
+    margin-top: -15px;
+    margin-bottom: 20px;
   }
 }
 
