--- a/src/app/components/informes/informe-descuento/informe-descuento.component.html
+++ b/src/app/components/informes/informe-descuento/informe-descuento.component.html
@@ -300,11 +300,11 @@
     <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-hover table-sm">
       <thead>
         <tr>
-          <th class="alignTableItems">Categoría</th>
-          <th class="alignTableItems">Subcategoría</th>
-          <th class="alignTableItems">Tipo de prenda</th>
-          <th class="alignTableItems">Descuento promedio</th>
-          <th class="alignTableItems">Diferencia</th>
+          <th class="alignTableTitles">Categoría</th>
+          <th class="alignTableTitles">Subcategoría</th>
+          <th class="alignTableTitles">Tipo de prenda</th>
+          <th class="alignTableTitles">Descuento promedio</th>
+          <th class="alignTableTitles">Diferencia</th>
         </tr>
       </thead>
       <tbody>
