--- a/src/app/components/informes/informe-nuevos/informe-nuevos.component.html
+++ b/src/app/components/informes/informe-nuevos/informe-nuevos.component.html
@@ -1,7 +1,7 @@
 <div class="grid">
   <!-- chart -->
   <div class="chart-container">
-    <div class="gridFiltersCharts">
+    <div class="alignFilterChart">
       <h2 class="titulo-chart">Novedades comparación marcas</h2>
 
       <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal(template)" width="17" heigth="17"
@@ -148,7 +148,7 @@
 
   <!-- tabla recien llegados -->
   <div class="table-container">
-    <div class="gridFiltersTable">
+    <div class="alignFilterTable">
       <div>
         <h2>Categorías con mayor cambio - Recien llegados</h2>
       </div>
@@ -157,7 +157,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal2(template2)" width="17" heigth="17"
           xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
           viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill:#000000 " role="img"
-          aria-label="Illustration of a Funnel" class="hoverSvgFilter svgFilterChart">
+          aria-label="Illustration of a Funnel" class="hoverSvgFilter svgFilter">
           <g id="__id33_ssutzzo1g">
             <path d="m350 144.09h180v20l-70 90v100l-40-20v-80l-70-90v-20" transform="translate(-350 -144.09)"
               style="fill: inherit"></path>
@@ -297,20 +297,20 @@
     <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-hover table-sm">
       <thead>
         <tr>
-          <th>Categoría</th>
-          <th>Subcategoría</th>
-          <th>Tipo de prenda</th>
-          <th>Los recién llegados</th>
-          <th>Diferencia</th>
+          <th class="alignTableTitles">Categoría</th>
+          <th class="alignTableTitles">Subcategoría</th>
+          <th class="alignTableTitles">Tipo de prenda</th>
+          <th class="alignTableTitles">Los recién llegados</th>
+          <th class="alignTableTitles">Diferencia</th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let e of photos">
-          <td data-label="Categoría"> {{e.categoria}} </td>
-          <td data-label="Subcategoría"> {{e.subCategoria}} </td>
-          <td data-label="Tipo de prenda"> {{e.tipoPrenda}} </td>
-          <td data-label="Los recién llegados"> {{tableAvgnuevos}} </td>
-          <td data-label="Diferencia" [ngClass]="diferencia()"> {{tableDifference[1]}} </td>
+          <td data-label="Categoría"  class="alignTableItems"> {{e.categoria}} </td>
+          <td data-label="Subcategoría"  class="alignTableItems"> {{e.subCategoria}} </td>
+          <td data-label="Tipo de prenda"  class="alignTableItems"> {{e.tipoPrenda}} </td>
+          <td data-label="Los recién llegados"  class="alignTableItems"> {{tableAvgnuevos}} </td>
+          <td data-label="Diferencia" [ngClass]="diferencia()"  class="alignTableItems"> {{tableDifference[1]}} </td>
         </tr>
       </tbody>
     </table>
