--- a/src/app/components/informes/informe-sku/informe-sku.component.css
+++ b/src/app/components/informes/informe-sku/informe-sku.component.css
@@ -2,10 +2,6 @@
   height: 250px;
 }
 
-.titulo-chart {
-  text-align: center;
-}
-
 .marginTitle {
   margin-top: -20px;
 }
@@ -103,6 +99,14 @@ tr:hover td {
   color: green;
 }
 
+.alignTableTitles {
+  text-align: center;
+}
+
+.alignTableItems {
+  text-align: center;
+}
+
 /* Responsive tables*/
 @media screen and (max-width: 600px) {
   table {
@@ -132,38 +136,48 @@ tr:hover td {
     font-weight: bold;
     float: left;
   }
+
+  .alignTableItems {
+    text-align: right;
+  }
 }
 /* Fin Tablas */
 
 /* inicio estilos chart */
 
-.gridFiltersCharts {
+.alignFilterChart {
   display: grid;
-  grid-template-columns: 95% 5%;
+  grid-template-columns: 99% 1%;
+  text-align: center;
 }
 
-.gridFiltersTable {
+.alignFilterTable {
   display: grid;
-  grid-template-columns: 95% 5%;
+  grid-template-columns: 99% 1%;
+  text-align: center;
+}
+
+.svgFilter {
+  margin-top: 10px;
+  margin-left: -20px;
+}
+
+.svgFilterChart {
+  margin-top: 10px;
+  margin-left: -20px;
 }
 
 /* media queryes */
 @media (max-width: 600px) {
 
-  .gridFiltersCharts {
+  .alignFilterTable {
     display: block;
+    text-align: center;
   }
 
-  .svgFilterChart {
-    display: flex;
-  }
-
-  .titulo-chart {
-    text-align: left;
-  }
-
-  .gridFiltersTable {
-    display: block;
+  .svgFilter {
+    margin-top: -15px;
+    margin-bottom: 20px;
   }
 }
 
