--- a/src/app/components/informes/informe-descuento/informe-descuento.component.css
+++ b/src/app/components/informes/informe-descuento/informe-descuento.component.css
@@ -156,7 +156,7 @@ tr:hover td {
 
 .alignFilterChart {
   display: grid;
-  grid-template-columns: 70% 30%;
+  grid-template-columns: 99% 1%;
   text-align: center;
 }
 
@@ -202,27 +202,25 @@ tr:hover td {
 
   .alignFilterChart {
     display: inline-grid;
-    grid-template-columns: 70% 30%;
+    grid-template-columns: 90% 10%;
     width: 100%;
     align-items: center;
   }
 
+  .alignFilterTable {
+    display: grid;
+    grid-template-columns: 90% 10%;
+    text-align: center;
+  }
+
   .svgFilterChart {
-    margin-bottom: 35px;
-    margin-left: -100px;
+    margin-bottom: 7px;
+    margin-left: 0px;
   }
 
-  .gridFiltersCharts {
-    display: block;
-  }
-
-
-  .titulo-chart {
-    text-align: left;
-  }
-
-  .gridFiltersTable {
-    display: block;
+  .svgFilter {
+    margin-bottom: 7px;
+    margin-left: 0px;
   }
 }
 
