--- a/src/app/components/informe-categoria/table2/table2.component.css
+++ b/src/app/components/informe-categoria/table2/table2.component.css
@@ -116,6 +116,18 @@ tr:hover td {
   color: green;
 }
 
+.alignTableTitles {
+  text-align: center;
+}
+
+.alignTableItems {
+  text-align: center;
+}
+
+.alignTableImage {
+  text-align: center;
+}
+
 .prenda1 {
   width: 120px;
   height: 150px;
@@ -155,6 +167,10 @@ tr:hover td {
     content: attr(data-label);
     font-weight: bold;
     float: left;
+  }
+
+  .alignTableItems {
+    text-align: right;
   }
 }
 /* Fin Tablas */
