--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -230,10 +230,12 @@
               </ul>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" (click)="localStorageAlert()">Mostrar datos</button>
-              <button type="button" class="btn btn-secondary" (click)="setCheck()">Setear filtro anterior</button>
+              <!--
+                <button type="button" class="btn btn-secondary" (click)="localStorageAlert()">Mostrar datos</button>
+                <button type="button" class="btn btn-secondary" (click)="setCheck()">Setear filtro anterior</button>
+              -->
               <button type="button" class="btn btn-danger" (click)="clearFilters()">Limpiar filtros</button>
-              <button type="button" class="btn btn-primary" (click)="closeModal()">Cerrar</button>
+              <button type="button" class="btn btn-primary" (click)="closeModal()">Aplicar filtros</button>
             </div>
           </ng-template>
 
