--- a/src/app/components/informe-categoria/informe-categoria.component.html
+++ b/src/app/components/informe-categoria/informe-categoria.component.html
@@ -482,26 +482,26 @@
           class="table table-striped row-border hover marginTable">
           <thead>
             <tr>
-              <th>Categoría</th>
-              <th>Subcategoría</th>
-              <th>Tipo de prenda</th>
-              <th>SKU</th>
-              <th>Precio promedio</th>
-              <th>Nueva llegada</th>
-              <th>Tasa de frescura</th>
-              <th>Descuento promedio</th>
+              <th class="alignTableTitles">Categoría</th>
+              <th class="alignTableTitles">Subcategoría</th>
+              <th class="alignTableTitles">Tipo de prenda</th>
+              <th class="alignTableTitles">SKU</th>
+              <th class="alignTableTitles">Precio promedio</th>
+              <th class="alignTableTitles">Nueva llegada</th>
+              <th class="alignTableTitles">Tasa de frescura</th>
+              <th class="alignTableTitles">Descuento promedio</th>
             </tr>
           </thead>
           <tbody>
             <tr *ngFor="let e of photos">
-              <td data-label="Categoría"> {{e.categoria}} </td>
-              <td data-label="Subcategoría"> {{e.subCategoria}} </td>
-              <td data-label="Tipo de prenda"> {{e.tipoPrenda}} </td>
-              <td data-label="SKU"> {{tableAvgSKU}} </td>
-              <td data-label="Precio promedio"> {{averagePrice}} </td>
-              <td data-label="Nueva llegada"> {{averageNews2}} </td>
-              <td data-label="Tasa de frescura"> {{tasaFrescura}} </td>
-              <td data-label="Descuento promedio"> {{averageDiscount2}} </td>
+              <td data-label="Categoría" class="alignTableItems"> {{e.categoria}} </td>
+              <td data-label="Subcategoría" class="alignTableItems"> {{e.subCategoria}} </td>
+              <td data-label="Tipo de prenda" class="alignTableItems"> {{e.tipoPrenda}} </td>
+              <td data-label="SKU" class="alignTableItems"> {{tableAvgSKU}} </td>
+              <td data-label="Precio promedio" class="alignTableItems"> {{averagePrice}} </td>
+              <td data-label="Nueva llegada" class="alignTableItems"> {{averageNews2}} </td>
+              <td data-label="Tasa de frescura" class="alignTableItems"> {{tasaFrescura}} </td>
+              <td data-label="Descuento promedio" class="alignTableItems"> {{averageDiscount2}} </td>
             </tr>
           </tbody>
         </table>
