--- a/src/app/components/informes/informe-descontinuados/informe-descontinuados.component.html
+++ b/src/app/components/informes/informe-descontinuados/informe-descontinuados.component.html
@@ -131,7 +131,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-danger" (click)="clearFilters()">Limpiar filtros</button>
-          <button type="button" class="btn btn-primary" (click)="closeModal()">Cerrar</button>
+          <button type="button" class="btn btn-primary" (click)="closeModal()">Aplicar filtros</button>
         </div>
       </ng-template>
     </div>
@@ -281,7 +281,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-danger" (click)="clearFilters2()">Limpiar filtros</button>
-            <button type="button" class="btn btn-primary" (click)="closeModal2()">Cerrar</button>
+            <button type="button" class="btn btn-primary" (click)="closeModal2()">Aplicar filtros</button>
           </div>
         </ng-template>
       </div>
