se organiza el chart pie y los titulos

--- a/src/app/components/productos/cat-mujer/cat-mujer.component.html
+++ b/src/app/components/productos/cat-mujer/cat-mujer.component.html
@@ -107,7 +107,7 @@
 <div class="grid-container">
     <div class="item1 grid-container-item1">
         <div>
-            <h2>Categorías</h2>
+            <h2 class="ml-2">Categorías</h2>
             <div class="item1-1-content items">
                 <div class="item1-1-img">
                     <img src="../../../../assets/mujer.png" alt="Silueta Mujer" class="float-left imgWoman">
@@ -120,7 +120,7 @@
             </div>
         </div>
         <div>
-            <h2>Sub-Categorías</h2>
+            <h2 class="ml-2">Sub-Categorías</h2>
             <div class="item1-2-content items">
                 <div class="item2-2-img">
                     <h3>Exterior</h3>
@@ -155,7 +155,7 @@
     </div>
     <div class="item2">
         <div class="grid-container-item2 mt-4">
-            <h2>Colores</h2>
+            <h2 class="ml-2">Colores</h2>
             <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal2(template2)" width="17" heigth="17" xmlns:xlink="http://www.w3.org/1999/xlink"
                 preserveAspectRatio="xMidYMid meet" version="1.0" viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify"
                 style="fill:#000000 " role="img" aria-label="Illustration of a Funnel" class="hoverSvgFilter">
