--- a/src/app/components/productos/cat-kids/cat-kids.component.html
+++ b/src/app/components/productos/cat-kids/cat-kids.component.html
@@ -106,7 +106,7 @@
 <div class="grid-container">
     <div class="item1 grid-container-item1">
         <div>
-            <h2>Categorías</h2>
+            <h2 class="ml-2">Categorías</h2>
             <div class="item1-1-content items">
                 <div class="item1-1-img">
                     <img src="../../../../assets/kids.png" alt="Silueta Hombre" class="float-left imgKids mr-3">
@@ -119,7 +119,7 @@
             </div>
         </div>
         <div>
-            <h2>Sub-Categorías</h2>
+            <h2 class="ml-2">Sub-Categorías</h2>
             <div class="item1-2-content items">
                 <div class="item2-2-img">
                     <h3>Exterior</h3>
@@ -154,7 +154,7 @@
     </div>
     <div class="item2">
         <div class="grid-container-item2 mt-4">
-            <h2>Colores</h2>
+            <h2 class="ml-2">Colores</h2>
             <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal2(template2)" width="17" heigth="17"
                 xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
                 viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill:#000000 " role="img"
