--- a/src/app/components/informe-categoria/informe-categoria.component.html
+++ b/src/app/components/informe-categoria/informe-categoria.component.html
@@ -498,10 +498,10 @@
               <td data-label="Subcategoría" class="alignTableItems"> {{e.subCategoria}} </td>
               <td data-label="Tipo de prenda" class="alignTableItems"> {{e.tipoPrenda}} </td>
               <td data-label="SKU" class="alignTableItems"> {{tableAvgSKU}} </td>
-              <td data-label="Precio promedio" class="alignTableItems"> {{averagePrice}} </td>
+              <td data-label="Precio promedio" class="alignTableItems"> $ {{averagePrice}} </td>
               <td data-label="Nueva llegada" class="alignTableItems"> {{averageNews2}} </td>
               <td data-label="Tasa de frescura" class="alignTableItems"> {{tasaFrescura}} </td>
-              <td data-label="Descuento promedio" class="alignTableItems"> {{averageDiscount2}} </td>
+              <td data-label="Descuento promedio" class="alignTableItems"> {{averageDiscount2}} % </td>
             </tr>
           </tbody>
         </table>
